--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
         </a>
         <div class="dropdown">
             <button type="button" class="btn dropdown-toggle ml-3 mt-2 float-left" data-toggle="dropdown" style="float: left;">
-                <img src="moon.png" alt="" width="30">
+                <img src="daytime.png" alt="" width="30">
+
             </button>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="https://arafat2342.github.io/nav/">
-                    <img src="daytime.png" alt="" width="30">
+                <a class="dropdown-item" href="https://arafat2342.github.io/dark-profile/">
+                <img src="moon.png" alt="" width="30">
                 </a>
             </div>
         </div>
